--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block htmltitle %}
-  <style>
+  <!-- <style>
   :root {
   --bg-override: transparent;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -55,7 +55,7 @@ body {
       console.error('主题加载错误', e);
     }
   })();
-  </script>
+  </script> -->
 
 {% endblock %}
 
